# VulkanComputeRayTracing

./: .gitignore  CMakeLists.txt  Environment.cpp  Frontend.cpp  README.md  Renderer.cpp  SceneGenerator.cpp  Shader.cpp  VulkanComputeRayTracing.cpp  VulkanComputeRayTracing.kdev4
include/: Common.hpp  Environment.hpp  Frontend.hpp  Platform.hpp  Renderer.hpp  Shader.hpp  VulkanComputeRayTracing.hpp
platform/: Linux.cpp  Win32.cpp
shaders/: shader.comp  shader.frag  shader.vert
shaders/include/: functions.glsl  globals.glsl  structures.glsl  textures.glsl
